Fix most raw StatementDefinition references
StatementDefinition is generic, make sure we pass the appropriate
parameters.

Change-Id: Ic8cf3d7e610e86e894c628ed6cf73277049b5b7f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>